--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,12 +24,6 @@ jobs:
       REPORT_GAS: 100000
       MORALIS_API_KEY: '1bc98781c489b0811e7491ec'
       ETHERSCAN_API_KEY: 'TV6RG2E2QPI5KIAFZ6DE6JMJVPSAMQ1TF9'
-      BSCSCAN_API_KEY: 'WN5RK3JUG5JWZC93592WK8FMA938CMEG6S'
-      POLYGONSCAN_API_KEY: 'SYWDNNF2HSI4SY4RW27IZAZWXCDATFFC5S'
-      DEV_ADDRESS: '0x2aBC16cC8082f5c7D707800D3B3b11bd1B9063C6'
-      ALLOCATION_POINT_ETHDAI: 10
-      TOKENS_PER_BLOCK: 100
-      BONUS_END_BLOCK: 100000000
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -43,7 +37,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          npm install --save-dev hardhat
-          yarn install
+          yarn
           yarn compile
           yarn test
