--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dontapethis",
+  "name": "uniswap-clone-contract",
   "version": "2.0.0",
   "description": "",
   "main": "index.ts",
