--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,10 +20,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      MNEMONIC: 'disease mango fresh safe amused pretty blouse minor extend avoid describe palace'
-      REPORT_GAS: 100000
-      MORALIS_API_KEY: '1bc98781c489b0811e7491ec'
-      ETHERSCAN_API_KEY: 'TV6RG2E2QPI5KIAFZ6DE6JMJVPSAMQ1TF9'
+      MNEMONIC: 'test test test test test test test test test test test junk'
+      MORALIS_API_KEY: ${{ secrets.MORALIS_API_KEY }}
+      ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
